# chess-rs

./: .gitignore  .ignore  Cargo.toml  README.md  Rocket.toml  chess-rs.code-workspace  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js  wrangler.toml
assets/: app.css
public/: app.css
src/: boosted.rs  lib.rs  main.rs  root.rs
src/states/: template.rs
src/template/: mod.rs
src/templates/: root.hbs
styles/: app.css
templates/: root.hbs
templates/no-headers/: root-nh.hbs
tera/: intermediate.html  layout.html
tera/pages/: chat_menu.html
